<resources>
    <string name="app_name">Petagram</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_about">Acerca de</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nombre_contacto">Nombre</string>
    <string name="correo_contacto">E-mail</string>
    <string name="mensaje_contacto">Mensaje</string>
    <string name="btnEnviar_contacto">Enviar Mensaje</string>
    <string name="nombreAbout">Desarrollador: Fernando Corona Jiménez</string>
    <string name="profeisonAbout">Ingeniero en Telemática</string>
    <string name="escuelaAbout">UPIITA-IPN</string>
    <string name="nombrePerfil">Chupón</string>

</resources>