<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".optionsmenu.ActivityContacto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre_contacto"
            android:inputType="textPersonName"
            android:textSize="@dimen/textp_contacto" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo_contacto"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textp_contacto" />

        <EditText
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mensaje_alto"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/mensaje_contacto"
            android:inputType="textMultiLine"
            android:textSize="@dimen/textp_contacto" />

        <Button
            android:id="@+id/btnEnviarMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/btnEnviar_contacto"
            android:onClick="enviarMail"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>