<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".optionsmenu.ActivityAbout">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAbout"
        android:layout_width="@dimen/card_medida"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="#FFFFFFFF"
        app:cardBackgroundColor="#FFFFFFFF"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="501dp"
            android:background="#FFFFFFFF"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imgAbout"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:src="@drawable/avatar" />

            <TextView
                android:id="@+id/tvNombreAbout"
                android:layout_width="wrap_content"
                android:layout_height="89dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/nombreAbout"
                android:textSize="30sp"
                app:fontFamily="sans-serif-black" />

            <TextView
                android:id="@+id/tvCarrera"
                android:layout_width="match_parent"
                android:layout_height="@dimen/like_medida"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/profeisonAbout"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEscuela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escuelaAbout"
                android:gravity="center_horizontal"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>